[tool.poetry]
name = "remote-sensing-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = ">=2.1.0"
pandas = ">=2.2.0"
duckdb = ">=1.1.0"
polars = ">=1.8.0"
rasterio = ">=1.4.0"
folium = ">=0.16.0"
matplotlib = ">=3.9.0"
dask = ">=2024.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
